--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,56 @@
 alembic==0.9.9
+awscli==1.11.13
+blinker==1.3
+botocore==1.4.70
+chardet==3.0.4
 click==6.7
+cloud-init==18.2
+colorama==0.3.7
+command-not-found==0.3
+configobj==5.0.6
+cryptography==1.2.3
+docutils==0.12
 Flask==0.12.2
 Flask-API==1.0
+Flask-Cors==3.0.3
 Flask-Login==0.4.1
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+idna==2.5
 itsdangerous==0.24
 Jinja2==2.10
+jmespath==0.9.0
+jsonpatch==1.10
+jsonpointer==1.9
+language-selector==0.1
 Mako==1.0.7
 MarkupSafe==1.0
+oauthlib==1.0.3
+Pillow==3.1.2
+prettytable==0.7.2
 psycopg2==2.7.4
+pyasn1==0.1.9
+pycurl==7.43.0
+Pygments==2.1
+pygobject==3.20.0
+PyJWT==1.3.0
+pyserial==3.0.1
+python-apt==1.1.0b1+ubuntu0.16.4.1
 python-dateutil==2.7.2
+python-debian==0.1.27
 python-editor==1.0.3
+python-systemd==231
+PyYAML==3.11
+requests==2.9.1
+roman==2.0.0
+rsa==3.2.3
+s3transfer==0.1.9
 six==1.11.0
 SQLAlchemy==1.2.6
+ssh-import-id==5.5
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.13.1
+virtualenv==15.0.1
 Werkzeug==0.14.1
